[package]
name = "loom-ringbuf"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[[bin]]
name = "loom-ringbuf"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loom = { version = "0.4", optional = true, features = [ "checkpoint" ] }

[profile.release]
debug = true
